# py

./: Makefile  README.md  docusaurus.config.js  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/1-python-basic/: _category_.json
docs/2-data-and-algorithm/: _category_.json
src/css/: custom.css
src/pages/: _index.tsx
static/array/: average.ipynb  average2.ipynb  average3.ipynb  average4.ipynb  average_numpy.ipynb  average_statistics.ipynb  change.ipynb  change2.ipynb  change3.ipynb  max.ipynb  range.ipynb  sum.ipynb  sum2.ipynb  variance.ipynb  variance2.ipynb  variance_numpy.ipynb  variance_statistics.ipynb
static/dp/: fib_bottom_up.ipynb  fib_bottom_up2.ipynb  fib_memoization.ipynb  knapsack.ipynb  ssp.ipynb
static/error/: cancellation.ipynb  cancellation_correct.ipynb  loss.ipynb  loss_correct.ipynb  rounding_error.ipynb
static/expressions/: div.ipynb  exp.ipynb  golden_ratio.ipynb  multi.ipynb  quotient.ipynb  remainder.ipynb  sub.ipynb  sum.ipynb  sum2.ipynb  to_fahrenheit.ipynb
static/for/: factorial.ipynb  factorial_math.ipynb  print_1to10.ipynb  range.ipynb  repeat_hello.ipynb  repeat_hello2.ipynb  sum_1to10.ipynb  sum_1to100.ipynb  sum_1to1000_revised.ipynb  sum_1to100_revised.ipynb  sum_1to20.ipynb  up_to.ipynb  up_to_sum.ipynb  while.ipynb
static/function/: calc_x^2.ipynb  calc_x^2_revised.ipynb  gravitation.ipynb  hello.ipynb  indent.ipynb  introduce_language.ipynb  introduce_language_fstring.ipynb  introduce_self.ipynb  introduce_self_fstring.ipynb  introduce_self_return_value.ipynb
(+339 files in other folders)
